name:                AIMA
version:             0.1.0.0
synopsis:            Solutions for AIMA
description:         Please see README.md
homepage:            https://github.com/tomsmalley/aima
license:             BSD3
license-file:        LICENSE
author:              Tom Smalley
copyright:           2017 Tom Smalley
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     AIMA
                     , AIMA.Agent.Core
                     , AIMA.Agent.Vacuum
  build-depends:       base >= 4.7 && < 5
                     , containers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tomsmalley/aima
